--- a/src/Panoramic/Pages/Widgets/Checklist/EditDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/Checklist/EditDialog.xaml
@@ -29,7 +29,7 @@
                             Click="DeleteTaskClicked"
                             ToolTipService.ToolTip="Remove"
                             VerticalAlignment="Stretch">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE74D;" FontSize="14" />
+                        <FontIcon Glyph="&#xE74D;" FontSize="14" />
                     </Button>
                 </Grid>
 
