--- a/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidgetPage.xaml
@@ -5,31 +5,31 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.Widgets.RecentLinks">
 
-    <Grid Background="{x:Bind ViewModel.Background, Mode=OneWay}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" Padding="15">
+    <Grid Background="{x:Bind ViewModel.Background, Mode=OneWay}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0">
+        <Border Grid.Row="0" Background="{x:Bind ViewModel.HeaderBackgroundBrush}" Padding="15 8 8 8">
             <Grid ColumnSpacing="10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Text="{x:Bind ViewModel.Title}" Foreground="{StaticResource PanoramicWidgetForegroundBrush}" FontSize="16" TextWrapping="Wrap" />
+                <TextBlock Grid.Column="0" Text="{x:Bind ViewModel.Title}" Foreground="{StaticResource PanoramicWidgetForegroundBrush}" FontSize="16" VerticalAlignment="Center" TextWrapping="Wrap" />
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
                     <Border Visibility="{x:Bind ViewModel.FilterIconVisibility, Mode=OneWay}"
-                            Background="{StaticResource PanoramicWidgetHighlightedBackgroundBrush}"
+                            Background="{StaticResource PanoramicHighlightedBackgroundBrush}"
                             Margin="0 0 8 0" Padding="10 0" CornerRadius="6" ToolTipService.ToolTip="Filtered">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71C;" FontSize="10" />
+                        <FontIcon Glyph="&#xE71C;" FontSize="10" />
                     </Border>
 
                     <DropDownButton AutomationProperties.Name="Setting">
                         <DropDownButton.Content>
-                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE712;" FontSize="14" />
+                            <FontIcon Glyph="&#xE712;" FontSize="14" />
                         </DropDownButton.Content>
                         <DropDownButton.Flyout>
                             <MenuFlyout Placement="Bottom">
@@ -44,7 +44,7 @@
             </Grid>
         </Border>
 
-        <Border Grid.Row="1" Margin="0 15 0 0">
+        <Border Grid.Row="1" Padding="15">
 
             <Border.Resources>
                 <DataTemplate x:Key="RecentLinksViewTemplate" x:DataType="vm:RecentLinkViewModel">
