--- a/src/Panoramic/Pages/Widgets/Checklist/ChecklistWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/Checklist/ChecklistWidgetPage.xaml
@@ -9,13 +9,13 @@
         <ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Light">
-                    <SolidColorBrush x:Key="PanoramicTaskDueBackgroundBrush" Color="#99ee0000" />
+                    <SolidColorBrush x:Key="PanoramicTaskOverdueBackgroundBrush" Color="#99ee0000" />
                     <SolidColorBrush x:Key="PanoramicTaskAlmostDueBackgroundBrush" Color="#aae9a00b" />
                     <SolidColorBrush x:Key="PanoramicTaskDueDateForeground" Color="#555" />
                 </ResourceDictionary>
 
                 <ResourceDictionary x:Key="Dark">
-                    <SolidColorBrush x:Key="PanoramicTaskDueBackgroundBrush" Color="#66ee0000" />
+                    <SolidColorBrush x:Key="PanoramicTaskOverdueBackgroundBrush" Color="#66ee0000" />
                     <SolidColorBrush x:Key="PanoramicTaskAlmostDueBackgroundBrush" Color="#77e9a00b" />
                     <SolidColorBrush x:Key="PanoramicTaskDueDateForeground" Color="#fff" />
                 </ResourceDictionary>
@@ -69,35 +69,36 @@
             </Grid>
         </Border>
 
-        <Border Grid.Row="1" Padding="15">
+        <Border Grid.Row="1" Padding="15 10">
 
             <Border.Resources>
                 <DataTemplate x:Key="ChecklistViewTemplate" x:DataType="vm:TaskViewModel">
                     <Grid ColumnSpacing="8">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="{x:Bind Title}" Foreground="{x:Bind TitleForeground, Mode=OneWay}" VerticalAlignment="Center" TextWrapping="Wrap" />
+                        <TextBlock Grid.Column="0" Text="{x:Bind Title}" Foreground="{x:Bind TitleForeground, Mode=OneWay}" VerticalAlignment="Center" TextWrapping="Wrap" />
 
-                        <Border Grid.Row="0" Grid.Column="1"
-                                Visibility="{x:Bind DueDateVisibility}"
-                                ToolTipService.ToolTip="{x:Bind DueDateTooltip}"
-                                Background="{x:Bind DueDateBackground}"
-                                CornerRadius="5"
-                                Padding="10 0">
-                            <TextBlock Text="{x:Bind DueDate}" Foreground="{StaticResource PanoramicTaskDueDateForeground}" FontSize="12" VerticalAlignment="Center" />
-                        </Border>
-                        
-                        <Button Grid.Row="0" Grid.Column="2" Click="{x:Bind Complete}" IsEnabled="{x:Bind IsEnabled, Mode=OneWay}">
-                            <FontIcon Glyph="&#xE73E;" FontSize="14" />
-                        </Button>
+                        <Grid Grid.Column="1" ColumnSpacing="8" VerticalAlignment="Center">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <Border Grid.Column="0"
+                                    Visibility="{x:Bind DueDateVisibility}"
+                                    Background="{x:Bind DueDateBackground}"
+                                    CornerRadius="5"
+                                    Padding="10 0">
+                                <TextBlock Grid.Column="0" Text="{x:Bind DueLabel}" Foreground="{StaticResource PanoramicTaskDueDateForeground}" FontSize="12" VerticalAlignment="Center" />
+                            </Border>
+
+                            <Button Grid.Column="1" Click="{x:Bind Complete}" IsEnabled="{x:Bind IsEnabled, Mode=OneWay}">
+                                <FontIcon Glyph="&#xE73E;" FontSize="14" />
+                            </Button>
+                        </Grid>
                     </Grid>
                 </DataTemplate>
             </Border.Resources>
