--- a/src/Panoramic/Pages/Widgets/Note/NoteRenameForm.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/NoteRenameForm.xaml
@@ -12,6 +12,7 @@
         <TextBox Grid.Row="0"
                  x:Name="NameTextBox"
                  Text="{x:Bind ViewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 PlaceholderText="Name"
                  MaxLength="60">
             <TextBox.KeyboardAccelerators>
                 <KeyboardAccelerator Key="Enter" Modifiers="None" Invoked="TextBoxEnter_Pressed" />
