feat: path selector in new note/folder dialog and hotkey for the new note dialog

--- a/src/Panoramic/MainWindow.xaml
+++ b/src/Panoramic/MainWindow.xaml
@@ -9,6 +9,7 @@
         <Grid.KeyboardAccelerators>
             <KeyboardAccelerator Invoked="ControlSHotkey_Invoked" Key="S" Modifiers="Control" ToolTipService.ToolTip="" />
             <KeyboardAccelerator Invoked="EscapeHotkey_Invoked" Key="Escape" ToolTipService.ToolTip="" />
+            <KeyboardAccelerator Invoked="ControlNHotkey_Invoked" Key="N" Modifiers="Control" ToolTipService.ToolTip="" />
             <KeyboardAccelerator Invoked="ControlTHotkey_Invoked" Key="T" Modifiers="Control" ToolTipService.ToolTip="" />
         </Grid.KeyboardAccelerators>
 
