--- a/src/Panoramic/App.xaml
+++ b/src/Panoramic/App.xaml
@@ -34,6 +34,8 @@
                     <SolidColorBrush x:Key="PanoramicOrangeHeaderHighlight" Color="#ea5" />
                     <SolidColorBrush x:Key="PanoramicPurpleHeaderHighlight" Color="#cbe" />
                     <SolidColorBrush x:Key="PanoramicTealHeaderHighlight" Color="#aae0e0" />
+
+                    <SolidColorBrush x:Key="PanoramicFileSystemIconForegroundBrush" Color="#333" />
                 </ResourceDictionary>
 
                 <ResourceDictionary x:Key="Dark">
@@ -58,6 +60,8 @@
                     <SolidColorBrush x:Key="PanoramicOrangeHeaderHighlight" Color="#553300" />
                     <SolidColorBrush x:Key="PanoramicPurpleHeaderHighlight" Color="#31113e" />
                     <SolidColorBrush x:Key="PanoramicTealHeaderHighlight" Color="#004040" />
+
+                    <SolidColorBrush x:Key="PanoramicFileSystemIconForegroundBrush" Color="#ddd" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
 
