--- a/src/Panoramic/Pages/Widgets/Note/FolderRenameForm.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/FolderRenameForm.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Grid RowSpacing="15">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
