--- a/src/Panoramic/Pages/Widgets/Note/NewFolderForm.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/NewFolderForm.xaml
@@ -2,22 +2,43 @@
 <Page
     x:Class="Panoramic.Pages.Widgets.Note.NewFolderForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:vm="using:Panoramic.ViewModels.Widgets.Note">
 
-    <Grid RowSpacing="15">
+    <Grid RowSpacing="25">
+        <Grid.Resources>
+            <DataTemplate x:Key="FolderTemplate" x:DataType="vm:ExplorerFolder">
+                <TreeViewItem AutomationProperties.Name="{x:Bind Name}" ItemsSource="{x:Bind Subfolders}" IsSelected="{x:Bind IsSelected, Mode=OneWay}" IsExpanded="True">
+                    <StackPanel Orientation="Horizontal">
+                        <FontIcon Glyph="&#xE8B7;" Foreground="{StaticResource PanoramicFileSystemIconForegroundBrush}" />
+                        <TextBlock Text="{x:Bind Name}" Margin="10 0 0 0" />
+                    </StackPanel>
+                </TreeViewItem>
+            </DataTemplate>
+        </Grid.Resources>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="150" />
         </Grid.RowDefinitions>
-
+        
         <TextBox Grid.Row="0"
                  x:Name="NameTextBox"
                  Text="{x:Bind ViewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  PlaceholderText="Name"
                  MaxLength="60">
             <TextBox.KeyboardAccelerators>
-                <KeyboardAccelerator Key="Enter" Modifiers="None" Invoked="TextBoxEnter_Pressed" />
+                <KeyboardAccelerator Key="Enter" Invoked="TextBoxEnter_Pressed" />
             </TextBox.KeyboardAccelerators>
         </TextBox>
+
+        <ScrollView Grid.Row="1">
+            <TreeView ItemsSource="{x:Bind ViewModel.ExplorerFolders}"
+                      ItemTemplate="{StaticResource FolderTemplate}"
+                      SelectedItem="{x:Bind ViewModel.SelectedFolder, Mode=TwoWay}"
+                      CanDragItems="False"
+                      AllowDrop="False" />
+        </ScrollView>
     </Grid>
 
 </Page>
