--- a/src/Panoramic/App.xaml
+++ b/src/Panoramic/App.xaml
@@ -27,13 +27,13 @@
                     <SolidColorBrush x:Key="PanoramicPaleTextForeground" Color="#888" />
                     
                     <!-- Header highlights -->
-                    <SolidColorBrush x:Key="PanoramicBlueHeaderHighlight" Color="#acf" />
-                    <SolidColorBrush x:Key="PanoramicRedHeaderHighlight" Color="#ef7777" />
-                    <SolidColorBrush x:Key="PanoramicGreenHeaderHighlight" Color="#bda" />
-                    <SolidColorBrush x:Key="PanoramicYellowHeaderHighlight" Color="#ed5" />
-                    <SolidColorBrush x:Key="PanoramicOrangeHeaderHighlight" Color="#ea5" />
-                    <SolidColorBrush x:Key="PanoramicPurpleHeaderHighlight" Color="#cbe" />
-                    <SolidColorBrush x:Key="PanoramicTealHeaderHighlight" Color="#aae0e0" />
+                    <SolidColorBrush x:Key="PanoramicBlueHighlight" Color="#acf" />
+                    <SolidColorBrush x:Key="PanoramicRedHighlight" Color="#ff7777" />
+                    <SolidColorBrush x:Key="PanoramicGreenHighlight" Color="#bda" />
+                    <SolidColorBrush x:Key="PanoramicYellowHighlight" Color="#ed5" />
+                    <SolidColorBrush x:Key="PanoramicOrangeHighlight" Color="#ea5" />
+                    <SolidColorBrush x:Key="PanoramicPurpleHighlight" Color="#cbe" />
+                    <SolidColorBrush x:Key="PanoramicTealHighlight" Color="#aae0e0" />
 
                     <SolidColorBrush x:Key="PanoramicFileSystemIconForegroundBrush" Color="#333" />
                 </ResourceDictionary>
@@ -53,13 +53,13 @@
                     <SolidColorBrush x:Key="PanoramicPaleTextForeground" Color="#aaa" />
 
                     <!-- Header highlights -->
-                    <SolidColorBrush x:Key="PanoramicBlueHeaderHighlight" Color="#112a4d" />
-                    <SolidColorBrush x:Key="PanoramicRedHeaderHighlight" Color="#411" />
-                    <SolidColorBrush x:Key="PanoramicGreenHeaderHighlight" Color="#131" />
-                    <SolidColorBrush x:Key="PanoramicYellowHeaderHighlight" Color="#444411" />
-                    <SolidColorBrush x:Key="PanoramicOrangeHeaderHighlight" Color="#553300" />
-                    <SolidColorBrush x:Key="PanoramicPurpleHeaderHighlight" Color="#31113e" />
-                    <SolidColorBrush x:Key="PanoramicTealHeaderHighlight" Color="#004040" />
+                    <SolidColorBrush x:Key="PanoramicBlueHighlight" Color="#112a4d" />
+                    <SolidColorBrush x:Key="PanoramicRedHighlight" Color="#411" />
+                    <SolidColorBrush x:Key="PanoramicGreenHighlight" Color="#131" />
+                    <SolidColorBrush x:Key="PanoramicYellowHighlight" Color="#444411" />
+                    <SolidColorBrush x:Key="PanoramicOrangeHighlight" Color="#553300" />
+                    <SolidColorBrush x:Key="PanoramicPurpleHighlight" Color="#31113e" />
+                    <SolidColorBrush x:Key="PanoramicTealHighlight" Color="#004040" />
 
                     <SolidColorBrush x:Key="PanoramicFileSystemIconForegroundBrush" Color="#ddd" />
                 </ResourceDictionary>
