--- a/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidgetPage.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.Widgets.RecentLinks">
-
+    
     <Grid Background="{x:Bind ViewModel.Background, Mode=OneWay}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -48,12 +48,27 @@
 
             <Border.Resources>
                 <DataTemplate x:Key="RecentLinksViewTemplate" x:DataType="vm:RecentLinkViewModel">
-                    <HyperlinkButton Content="{x:Bind Title}"
-                                 NavigateUri="{x:Bind Uri}"
-                                 ToolTipService.ToolTip="{x:Bind Tooltip}"
-                                 HorizontalAlignment="Stretch"
-                                 HorizontalContentAlignment="Left"
-                                 Click="{x:Bind Click}" />
+                    <Grid ColumnSpacing="8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <HyperlinkButton Grid.Column="0"
+                                         Content="{x:Bind Title}"
+                                         NavigateUri="{x:Bind Uri}"
+                                         ToolTipService.ToolTip="{x:Bind Tooltip}"
+                                         Click="{x:Bind Click}"
+                                         HorizontalAlignment="Stretch"
+                                         HorizontalContentAlignment="Left" />
+
+                        <Border Grid.Column="1"
+                                CornerRadius="5"
+                                Padding="10 6"
+                                VerticalAlignment="Center">
+                            <TextBlock Text="{x:Bind Context}" Foreground="{StaticResource PanoramicPaleTextForeground}" />
+                        </Border>
+                    </Grid>
                 </DataTemplate>
             </Border.Resources>
 
