--- a/src/Panoramic/Pages/Widgets/Note/NoteWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/Note/NoteWidgetPage.xaml
@@ -30,6 +30,17 @@
                         <FontIcon Glyph="&#xE70F;" FontSize="14" />
                     </ToggleButton>
 
+                    <DropDownButton AutomationProperties.Name="Setting"
+                                    Margin="0 0 8 0"
+                                    ToolTipService.ToolTip="Recent">
+                        <DropDownButton.Content>
+                            <FontIcon Glyph="&#xE81C;" FontSize="14" />
+                        </DropDownButton.Content>
+                        <DropDownButton.Flyout>
+                            <MenuFlyout x:Name="RecentNotesMenuFlyout" Placement="Bottom" />
+                        </DropDownButton.Flyout>
+                    </DropDownButton>
+
                     <DropDownButton Visibility="{x:Bind ViewModel.ExplorerVisible, Mode=OneWay}"
                             ToolTipService.ToolTip="Add"
                             Margin="0 0 8 0">
@@ -41,12 +52,12 @@
                             <MenuFlyout Placement="Bottom">
                                 <MenuFlyoutItem Click="AddNoteFromContextMenu_Click" Text="Note">
                                     <MenuFlyoutItem.Icon>
-                                        <FontIcon Glyph="&#xE8A5;"/>
+                                        <FontIcon Glyph="&#xE8A5;" Foreground="{StaticResource PanoramicBlueForeground}" />
                                     </MenuFlyoutItem.Icon>
                                 </MenuFlyoutItem>
                                 <MenuFlyoutItem Click="AddFolderFromContextMenu_Click" Text="Folder">
                                     <MenuFlyoutItem.Icon>
-                                        <FontIcon Glyph="&#xE8B7;"/>
+                                        <FontIcon Glyph="&#xE8B7;" Foreground="{StaticResource PanoramicFileSystemIconForegroundBrush}" />
                                     </MenuFlyoutItem.Icon>
                                 </MenuFlyoutItem>
                             </MenuFlyout>
